<resources>
<string name="malaria_case_based_reporting">"Malaria Case-based Reporting"</string>
<string name="volunteer_label">"Volunteer:"</string>
<string name="new_case_title">"NEW CASE"</string>
<string name="patient_profile_subtitle">"Patient profile"</string>
<string name="patient_name">"Patient name"</string>
<string name="patient_name_enter_prompt">"Enter full patient name"</string>
<string name="patient_age">"Patient age"</string>
<string name="patient_age_enter_prompt">"Enter patient age in years"</string>
<string name="patient_phone">"Patient phone"</string>
<string name="patient_phone_enter_prompt">"Enter phone number"</string>
<string name="patient_residence_village">"Patient Residence"</string>
<string name="patient_residence_village_other_option">"Other"</string>
<string name="patient_residence_village_location">"If other, enter location"</string>
<string name="patient_residence_village_other">"Enter village or location"</string>
<string name="patient_sex_pregnancy">"Patient sex"</string>
<string name="patient_sex_male">"Male"</string>
<string name="patient_sex_female">"Female"</string>
<string name="patient_sex_female_pregnant">"Pregnant"</string>
<string name="symptoms_title">"Symptoms"</string>
<string name="symptoms_fever">"Malaria symptoms present?"</string>
<string name="symptoms_fever_text"></string>
<string name="symptoms_fever_yes">"Yes"</string>
<string name="symptoms_fever_no">"No"</string>
<string name="symptoms_care_sought">"Care sought within 24 hours?"</string>
<string name="symptoms_care_sought_text"></string>
<string name="symptoms_care_sought_within_24h">"Yes"</string>
<string name="symptoms_care_sought_after_24h">"No"</string>
<string name="symptoms_severity">"Severe symptoms present?"</string>
<string name="symptoms_severity_text"></string>
<string name="symptoms_severity_yes">"Yes"</string>
<string name="symptoms_severity_no">"No"</string>
<string name="rdt_test_result">"Test result"</string>
<string name="rdt_negative">"Negative"</string>
<string name="rdt_pf">"Pf"</string>
<string name="rdt_pv">"Pv"</string>
<string name="rdt_mixed">"Mixed"</string>
<string name="rdt_invalid">"Invalid"</string>
<string name="negative_test">"Negative result"</string>
<string name="negative_result">"Negative"</string>
<string name="negative_result_text">"Negative test result"</string>
<string name="negative_result_subtext">"Refer the patient to the nearest health facility."</string>
<string name="negative_end_test">"End test"</string>
<string name="invalid1_subtitle">"Invalid test 1"</string>
<string name="invalid1_result">"Invalid"</string>
<string name="invalid1_result_text">"Number of invalid tests: 1"</string>
<string name="invalid1_result_subtext">"Take a new sample and repeat test."</string>
<string name="invalid1_end_test">"Test again"</string>
<string name="invalid2_subtitle">"Invalid test 2"</string>
<string name="invalid2_result">"Invalid"</string>
<string name="invalid2_result_text">"Number of invalid tests: 2"</string>
<string name="invalid2_result_subtext">"Refer the patient to the nearest health facility and contact your supervisor."</string>
<string name="invalid2_end_test">"End test"</string>
<string name="drugs_referral">"Treatment"</string>
<string name="drugs_referral_instructions">"Give ACT 12' strip and 2 primaquine tablets."</string>
<string name="drugs_referral_ACT12_question">"ACT 12'?"</string>
<string name="drugs_referral_ACTx12_yes">"Yes"</string>
<string name="drugs_referral_ACTx12_no">"No"</string>
<string name="drugs_referral_Pqx2_question">"Pq 2?"</string>
<string name="drugs_referral_Pqx2_yes">"Yes"</string>
<string name="drugs_referral_Pqx2_no">"No"</string>
<string name="drugs_referral_referred_question">"Referred?"</string>
<string name="drugs_referral_yes">"Yes"</string>
<string name="drugs_referral_no">"No"</string>
<string name="patient_advice">"Patient advice"</string>
<string name="patient_advice_title_vomiting">"If  you vomit within 30 minutes, repeat dose."</string>
<string name="patient_advice_text_vomiting"></string>
<string name="patient_advice_title_medication_with_food">"Take this medication with food."</string>
<string name="patient_advice_text_medication_with_food"></string>
<string name="patient_advice_title_side_effects">"If you have dark urine, stop primaquine and go to the nearest health facility."</string>
<string name="patient_advice_text_side_effects"></string>
<string name="patient_advice_title_help">"If you do not feel better within 1 day, or start to feel worse, go to the nearest health facility."</string>
<string name="patient_advice_text_help">"."</string>
<string name="follow_up">"Follow-up"</string>
<string name="follow_up_travelling_question">"Have you traveled overnight in the last month?"</string>
<string name="follow_up_travelling_text"></string>
<string name="follow_up_travelling_yes">"Yes"</string>
<string name="follow_up_travelling_no">"No"</string>
<string name="follow_up_occupation_question">"Where did you travel?"</string>
<string name="follow_up_occupation_option_worksites">"Worksite"</string>
<string name="follow_up_occupation_option_forest">"Forest"</string>
<string name="follow_up_occupation_option_plantation">"Farm or plantation"</string>
<string name="follow_up_occupation_option_village">"Another village or city"</string>
<string name="follow_up_LLIN_ITN_usage_question">"Did you sleep under a LLIN or ITN last night?"</string>
<string name="follow_up_LLIN_ITN_usage_text"></string>
<string name="follow_up_LLIN_ITN_usage_yes">"Yes"</string>
<string name="follow_up_LLIN_ITN_usage_no">"No"</string>
<string name="follow_up_LLIN_ITN_ownership_question">"Do you have a LLIN or ITN?"</string>
<string name="follow_up_LLIN_ITN_ownership_text"></string>
<string name="follow_up_LLIN_ITN_ownership_yes">"Yes"</string>
<string name="follow_up_LLIN_ITN_ownership_no">"No"</string>
<string name="follow_up_end_test">"End test"</string>
<string name="survey_completed">"Survey completed"</string>
<string name="survey_completed_text">"The survey has been successfully completed."</string>
<string name="survey_review">"Review"</string>
<string name="survey_send">"Send"</string>
<string name="app_settings">"Settings"</string>
<string name="server">"Server:"</string>
<string name="server_name">"DHIS Server URL"</string>
<string name="app_visual">"Visual:"</string>
<string name="fonts_customise">"Customise fonts"</string>
<string name="font_size">"Font size"</string>
<string name="font_extra_small">"Extra small"</string>
<string name="font_small">"Small"</string>
<string name="font_medium">"Medium"</string>
<string name="font_large">"Large"</string>
<string name="font_extra_large">"Extra large"</string>
<string name="settings_select_language">"Language"</string>
<string name="developer_option_title">"Show developer options"</string>
<string name="developer_option_summary">"This feature activates the developer options."</string>
<string name="app_about">"About"</string>
<string name="app_legal">"Legal"</string>
<string name="app_copyright">"Copyright"</string>
<string name="app_software_licenses">"Software licenses"</string>
<string name="app_EULA">"EULA"</string>
<string name="app_logout">"Logout"</string>
<string name="settings_menu_logout_message">"Changing the server requires you to log out. All unsent surveys will be deleted. Are you sure you want to continue?"</string>
<string name="dashboard_menu_logout_message">"All unsent surveys will be deleted. Are you sure you want to continue?"</string>
<string name="settings_menu_about">"About"</string>
<string name="past_cases">"PAST CASES"</string>
<string name="sent_data">"Sent Data"</string>
<string name="unsent_data">"Unsent Data"</string>
<string name="stock_control">"STOCK CONTROL"</string>
<string name="receipts_balances">"Receipts &amp; balances"</string>
<string name="monitoring_title">"MONITORING"</string>
<string name="monitoring_time_period">"Time period"</string>
<string name="monitoring_label_option_months">"Last 6 months"</string>
<string name="monitoring_label_option_days">"Last 6 days"</string>
<string name="monitoring_label_option_weeks">"Last 6 weeks"</string>
<string name="monitoring_row_title_week">"Week"</string>
<string name="monitoring_row_title_day">"Day"</string>
<string name="monitoring_case_stats">"Statistics"</string>
<string name="monitoring_month_01_January">"Jan"</string>
<string name="monitoring_month_02_February">"Feb"</string>
<string name="monitoring_month_03_March">"Mar"</string>
<string name="monitoring_month_04_April">"Apr"</string>
<string name="monitoring_month_05_May">"May"</string>
<string name="monitoring_month_06_June">"Jun"</string>
<string name="monitoring_month_07_July">"Jul"</string>
<string name="monitoring_month_08_August">"Aug"</string>
<string name="monitoring_month_09_September">"Sep"</string>
<string name="monitoring_month_10_October">"Oct"</string>
<string name="monitoring_month_11_November">"Nov"</string>
<string name="monitoring_month_12_December">"Dec"</string>
<string name="monitor_row_title_tested">"Total tested"</string>
<string name="Pf">"Pf"</string>
<string name="Pv">"Pv"</string>
<string name="mixed">"Mixed"</string>
<string name="negative">"Negative"</string>
<string name="positivity_rate">"Positivity rate"</string>
<string name="referrals">"Referrals"</string>
<string name="consumption">"Consumption"</string>
<string name="RDT">"RDT"</string>
<string name="ACT_x_6">"ACT 6'"</string>
<string name="ACT_x_12">"ACT 12'"</string>
<string name="ACT_x_18">"ACT 18'"</string>
<string name="ACT_x_24">"ACT 24'"</string>
<string name="Cq">"Cq"</string>
<string name="Pq">"Pq"</string>
<string name="monitoring_title_dropdown">"Please select a time period."</string>
<string name="network_error">There is a problem with the network, please try again later.</string>
<string name="login_invalid_credentials">Invalid credentials</string>
<string name="login_invalid_server_url">Invalid Server URL</string>
<string name="ok">"Ok"</string>
<string name="cancel">"Cancel"</string>
<string name="dialog_title_delete_survey">"Delete survey"</string>
<string name="dialog_info_delete_survey">"Are you sure you want to delete this survey?"</string>
<string name="dialog_title_error">"Error"</string>
<string name="toast_push_is_pushing">"Sending surveys before entering settings."</string>
<string name="create_info_organization_unit">"Organization unit"</string>
<string name="assessment_sent_date">"Date"</string>
<string name="assessment_title_info">"Info"</string>
<string name="survey_info_exit">"Are you sure you want to exit?"</string>
<string name="survey_info_exit_delete">"The survey in progress will be deleted."</string>
<string name="exception_org_unit_not_valid"></string>
<string name="exception_org_unit_banned"></string>
<string name="dynamic_error_phone_format">"Invalid format for phone number"</string>
<string name="dynamic_error_age">"Invalid age"</string>
<string name="pref_header_general">"General"</string>
<string name="font_size_level0">"X small"</string>
<string name="font_size_level1">"Small"</string>
<string name="font_size_level2">"Medium"</string>
<string name="font_size_level3">"Large"</string>
<string name="font_size_level4">"X large"</string>
<string name="dialog_title_push">"Pushing data"</string>
<string name="dialog_title_push_response">"Push response"</string>
<string name="dialog_info_push_ok">"Survey data pushed to server. Results:"</string>
<string name="dialog_info_push_bad_credentials">"Bad credentials for pushing"</string>
<string name="dialog_error_push_no_uid">"No program UID found in server for code "</string>
<string name="see_receipt">"See receipt"</string>
<string name="new_receipt">"New receipt"</string>
<string name="see_resets">See Resets</string>
<string name="new_reset">New Reset</string>
<string name="received">"Received on:"</string>
<string name="x6">"6'"</string>
<string name="x12">"12'"</string>
<string name="x18">"18'"</string>
<string name="x24">"24'"</string>
</resources>