<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:background="@drawable/medium_purple_rounded_background"
            android:paddingBottom="2dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:text="Jan 12/16"
            android:textColor="@color/white"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_rdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/RDT"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_x6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/x6"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />
        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_x12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/x12"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_x18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/x18"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_x24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/x24"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_cq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/Cq"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />

        <org.eyeseetea.sdk.presentation.views.CustomTextView
            android:id="@+id/historic_receipt_balance_row_pq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bottom_border"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/Pq"
            android:textColor="@color/dark_purple"
            android:textSize="?attr/font_small"
            app:font_name="@string/specific_language_font" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/medium_light_purple" />
</LinearLayout>