<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/fragment_stock_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <org.eyeseetea.sdk.presentation.views.CustomButton
                            android:id="@+id/fragment_stock_see_receipt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/back_background_button"
                            android:drawableLeft="@drawable/back_button"
                            android:drawablePadding="2dp"
                            android:gravity="right|center"
                            android:paddingRight="20dp"
                            android:paddingLeft="4dp"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/see_receipt"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="?attr/font_small"
                            app:font="@string/condensed_font_name" />

                        <org.eyeseetea.sdk.presentation.views.CustomButton
                            android:id="@+id/fragment_stock_new_receipt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/next_background_button"
                            android:drawablePadding="2dp"
                            android:drawableRight="@drawable/ic_menu_add"
                            android:gravity="right|center"
                            android:padding="4dp"
                            android:text="@string/new_receipt"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="?attr/font_small"
                            app:font="@string/condensed_font_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <org.eyeseetea.sdk.presentation.views.CustomButton
                            android:id="@+id/fragment_stock_see_balance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/back_background_button"
                            android:drawableLeft="@drawable/back_button"
                            android:drawablePadding="2dp"
                            android:gravity="right|center"
                            android:paddingRight="20dp"
                            android:paddingLeft="4dp"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/see_resets"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="?attr/font_small"
                            app:font="@string/condensed_font_name" />

                        <org.eyeseetea.sdk.presentation.views.CustomButton
                            android:id="@+id/fragment_stock_new_balance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/next_background_button"
                            android:drawablePadding="2dp"
                            android:drawableRight="@drawable/ic_menu_add"
                            android:gravity="right|center"
                            android:padding="4dp"
                            android:text="@string/new_reset"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="?attr/font_small"
                            app:font="@string/condensed_font_name" />


                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>